Add database.js script to riwayat.html

--- a/riwayat.html
+++ b/riwayat.html
@@ -35,7 +35,8 @@
 
         <div id="result-area" style="display: none; margin-top: 20px;"></div>
     </div>
-
+    
+    <script src="database.js"></script>
     <script src="script.js"></script> <script>
         // Override function khusus halaman ini
         function checkOrder() {
